# message-svc

./: .env.example  Cargo.toml  build.rs  settings.toml.example
src/: lib.rs  main.rs  settings.rs
