[package]
name = "message-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
lettre = "0.11.15"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
arc-swap = "1.7.1"

[build-dependencies]
tonic-build = "0.13"
